--- a/linear-regression/linear-regression-synthetic-data-2.ipynb
+++ b/linear-regression/linear-regression-synthetic-data-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72715a64-53a3-4705-bda2-91c08820dbed",
    "metadata": {},
    "outputs": [],
@@ -15,10 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "06d668bc-e86e-409e-95e4-bdf693290efe",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\olato\\AppData\\Local\\Temp\\ipykernel_31400\\2621062507.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  df = pd.read_csv(\".\\data\\linear_regression_dataset.csv\")\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -170,13 +180,13 @@
        "[205 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Downloads\\linear_regression_dataset.csv\")\n",
+    "df = pd.read_csv(\".\\data\\linear_regression_dataset.csv\")\n",
     "df"
    ]
   },
@@ -1806,9 +1816,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1820,7 +1830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
