Reorganize repo structure and fix notebook paths

--- a/notebooks/01-linear-regression-synthetic-data-1.ipynb
+++ b/notebooks/01-linear-regression-synthetic-data-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "086aef98-b3fc-44aa-acd6-bd3fde9fe863",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "05b6c191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if os.getcwd().endswith(\"notebooks\"):\n",
+    "    os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "151f2879-e3ba-4987-92c0-ca4754500c9d",
    "metadata": {},
    "outputs": [
@@ -25,7 +37,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\olato\\AppData\\Local\\Temp\\ipykernel_49760\\2621062507.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\olato\\AppData\\Local\\Temp\\ipykernel_26272\\2621062507.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  df = pd.read_csv(\".\\data\\linear_regression_dataset.csv\")\n"
      ]
     },
@@ -180,7 +192,7 @@
        "[205 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
