--- a/notebooks/01-linear-regression-synthetic-data-2.ipynb
+++ b/notebooks/01-linear-regression-synthetic-data-2.ipynb
@@ -5,17 +5,42 @@
    "execution_count": 1,
    "id": "72715a64-53a3-4705-bda2-91c08820dbed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\olato\\\\machine-learning-intro\\\\notebooks'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import os\n",
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "id": "64b5eff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if os.getcwd().endswith(\"notebooks\"):\n",
+    "    os.chdir(\"..\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "06d668bc-e86e-409e-95e4-bdf693290efe",
    "metadata": {},
    "outputs": [
@@ -25,7 +50,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\olato\\AppData\\Local\\Temp\\ipykernel_49516\\2621062507.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\olato\\AppData\\Local\\Temp\\ipykernel_11800\\2621062507.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  df = pd.read_csv(\".\\data\\linear_regression_dataset.csv\")\n"
      ]
     },
@@ -180,7 +205,7 @@
        "[205 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
